# LogoMaker

RealLogoMaker/: BottomMenu.cpp  BottomMenu.h  CMakeLists.txt  ColorBar.cpp  ColorBar.h  ColorGradient.cpp  ColorGradient.h  ColorList.cpp  ColorList.h  ColorPicker.cpp  ColorPicker.h  ColorSquare.cpp  ColorSquare.h  Cursor.cpp  Cursor.h  DropdownMenu.cpp  DropdownMenu.h  EventHandler.h  FileItem.cpp  FileItem.h  FileNode.cpp  FileNode.h  FileTree.cpp  FileTree.h  FontSetting.cpp  FontSetting.h  GUIComponent.cpp  GUIComponent.h  History.cpp  History.h  InputBox.cpp  InputBox.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h  LogoMaker.cpp  LogoMaker.h  Menu.cpp  Menu.h  (+21 more)
